ecmascript/parser/tests/test262-error-references/fail/35e93eb65d07f8e8.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/35e93eb65d07f8e8.js:1:2
  |
1 | 3x
  |  ^

